--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "sass": "sass --watch ./sass/main.scss:./style.css"
   },
   "author": "marie burki",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.23.0"
+  }
 }
